# spotcli

./: .gitignore  CMakeLists.txt  buildOnly.sh  run.sh  setup.sh
include/: authSpotify.hpp  playlist.hpp  spotcli.hpp  token.hpp  utils.hpp
src/: authSpotify.cpp  main.cpp  playlist.cpp  token_repo.cpp  utils.cpp
